# company-management

./: .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: models.py  permissions.py  serializers.py  views.py
backend/migrations/: 0001_initial.py  0002_workers_company_workerks_workers_company_and_more.py  0003_rename_workerks_company_users.py  0004_rename_workers_worker.py
companies/: models.py  permissions.py  serializers.py  views.py
companies/migrations/: 0001_initial.py  0002_initial.py  0003_rename_user_company_admin.py
companies/tests/: test_as_admin.py  test_as_worker.py
company_management/: asgi.py  settings.py  urls.py  wsgi.py
offices/: admin.py  models.py  serializers.py  views.py
offices/migrations/: 0001_initial.py
offices/tests/: test_as_admin.py  test_as_worker.py
users/: admin.py  models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_user_office.py  0003_alter_user_company_alter_user_office.py  0004_alter_user_managers_remove_user_username_and_more.py
users/tests/: test_registration.py  test_worker_to_office_as_admin.py  test_workers_as_admin.py  test_workers_as_worker.py
vehicles/: models.py  serializers.py  views.py
vehicles/migrations/: 0001_initial.py  0002_vehicle_company.py
vehicles/tests/: test_as_admin.py
